--- a/index.html
+++ b/index.html
@@ -5,11 +5,131 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Redressed&family=Roboto+Slab:wght@300;400;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Rituraj Ranjan</title>
 </head>
 
 <body>
+    <div class="container">
+        <nav>
+            <h2>RITURAJ</h2>
+            <ul>
+                <li>Home</li>
+                <li>Projects</li>
+                <li>Work</li>
+            </ul>
+        </nav>
+        <main>
+            <section class="home">
+                <h1>Hello, I'm Rituraj Ranjan</h1>
+                <h2>I'm an aspiring software engineer</h2>
+                <img class="avatar" src="./assets/avatar.png" alt="avatar">
+                <div class="logos">
+                    <img src="./assets/logos/1.png" alt="" />
+                    <img src="./assets/logos/2.png" alt="" />
+                    <img src="./assets/logos/3.png" alt="" />
+                    <img src="./assets/logos/4.png" alt="" />
+                    <img src="./assets/logos/5.png" alt="" />
+                    <img src="./assets/logos/6.png" alt="" />
+                    <img src="./assets/logos/7.png" alt="" />
+                    <img src="./assets/logos/8.png" alt="" />
+                    <img src="./assets/logos/9.png" alt="" />
 
+                </div>
+            </section>
+            <section class="about">
+                <h2>I’m constantly aquiring knowledge, to become a better developer than I am.</h2>
+                <div class="skills">
+                    <div class="skill">
+                        <img src="./assets/fullstack.png" alt="">
+                        <h4>Full-Stack Developer</h4>
+                    </div>
+                    <div class="divider"></div>
+                    <div class="skill">
+                        <img src="./assets/uiux.png" alt="">
+                        <h4>UI/UX Designer</h4>
+                    </div>
+                    <div class="divider"></div>
+                    <div class="skill">
+                        <img src="./assets/techblog.png" alt="">
+                        <h4>Tech Blogger</h4>
+                    </div>
+                </div>
+            </section>
+            <section class="projects">
+                <h2>My Project Portfolio</h2>
+                <div class="buttons">
+                    <button class="active">Featured</button>
+                    <button>Web App</button>
+                    <button>Mobile App</button>
+                    <button>UI/UX</button>
+                </div>
+                <div class="cards">
+                    <div class="card">
+                        <img src="./assets/the-shoe-store.png" alt="">
+                        <h4>The Shoe Store</h4>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/the-shoe-store.png" alt="">
+                        <h4>The Shoe Store</h4>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/the-shoe-store.png" alt="">
+                        <h4>The Shoe Store</h4>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/the-shoe-store.png" alt="">
+                        <h4>The Shoe Store</h4>
+                    </div>
+                    <div class="card">
+                        <img src="./assets/the-shoe-store.png" alt="">
+                        <h4>The Shoe Store</h4>
+                    </div>
+                </div>
+            </section>
+            <div class="divider"></div>
+            <section class="work">
+                <h2>My Work Experience</h2>
+                <div class="content">
+                    <h4 class="year">2021</h4>
+                    <div class="timeline">
+                        <div class="line">
+                            <div class="circle"></div>
+                        </div>
+                    </div>
+                    <div class="role">
+                        <h4 class="position">React Native Developer(Internship)</h4>
+                        <h4 class="company">GeeksGod</h4>
+                    </div>
+                </div>
+            </section>
+            <footer>
+                <div class="socialicons">
+                    <div class="icon">
+                        <img src="./assets/icons/github.png" alt="">
+                    </div>
+                    <div class="divider"></div>
+                    <div class="icon">
+                        <img src="./assets/icons/instagram.png" alt="">
+                    </div>
+                    <div class="divider"></div>
+                    <div class="icon">
+                        <img src="./assets/icons/linkedin.png" alt="">
+                    </div>
+                    <div class="divider"></div>
+                    <div class="icon">
+                        <img src="./assets/icons/twitter.png" alt="">
+                    </div>
+                </div>
+                <h4>Made with &hearts; by Rituraj Ranjan</h4>
+            </footer>
+        </main>
+    </div>
 </body>
 
 </html>
